--- a/concept.scss
+++ b/concept.scss
@@ -8,21 +8,22 @@ body {
     height: 100vh;
     width: 100vw;
 
-    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+    font-size: calc(12px + (26 - 12) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
 * {
     box-sizing: border-box;
 }
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
 
 .sideways-scroll-container {
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y proximity;
     transform: rotate(-90deg) translateY(-$scroll-container-width);
     transform-origin: top right;
     overflow-y: scroll;
     overflow-x: hidden;
-    // display: flex;
-
 
     background-color: black;
     height: $scroll-container-height;
@@ -50,23 +51,37 @@ body {
     width: $scroll-container-height;
     padding: 5%;
 
-    text-align: justify;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    .content-wrapper {
+        text-align: justify;
+    }
 }
+
+/* CONTENT STYLING */
+h2 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: steelblue;
+    padding-bottom: 10px;
+}
+
 
 .sideways-scroll-child:nth-child(1) .scroll-child-content {
     background-color: white;
 }
 .sideways-scroll-child:nth-child(2) .scroll-child-content {
-    background-color: rgb(201, 201, 201);
+    background-color: rgb(230, 230, 230);
 }
 .sideways-scroll-child:nth-child(3) .scroll-child-content {
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(210, 210, 210);
 }
 .sideways-scroll-child:nth-child(4) .scroll-child-content {
-    background-color: rgb(99, 99, 99);
+    background-color: rgb(190, 190, 190);
 }
 .sideways-scroll-child:nth-child(5) .scroll-child-content {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(170, 170, 170);
 }
 
 
