--- a/concept.scss
+++ b/concept.scss
@@ -11,10 +11,17 @@ body {
     font-size: calc(12px + (26 - 12) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
+
 * {
     box-sizing: border-box;
 }
-h1,h2,h3,h4,h5,h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
@@ -33,8 +40,6 @@ h1,h2,h3,h4,h5,h6 {
 .sideways-scroll-child {
     scroll-snap-align: start;
     scroll-snap-stop: normal;
-    background-color: tomato;
-    box-shadow: 0 0 4px 4px black;
 
     height: $scroll-container-height;
     width: $scroll-container-width;
@@ -42,6 +47,9 @@ h1,h2,h3,h4,h5,h6 {
     justify-content: center;
 
     overflow: visible;
+
+    // background: rgb(255, 255, 255);
+    background: linear-gradient(rgb(255, 255, 255) 0%, rgb(226, 226, 226) 100%);
 }
 
 .scroll-child-content {
@@ -54,7 +62,7 @@ h1,h2,h3,h4,h5,h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     .content-wrapper {
         text-align: justify;
     }
@@ -68,22 +76,25 @@ h2 {
 }
 
 
-.sideways-scroll-child:nth-child(1) .scroll-child-content {
-    background-color: white;
-}
-.sideways-scroll-child:nth-child(2) .scroll-child-content {
-    background-color: rgb(230, 230, 230);
-}
-.sideways-scroll-child:nth-child(3) .scroll-child-content {
-    background-color: rgb(210, 210, 210);
-}
-.sideways-scroll-child:nth-child(4) .scroll-child-content {
-    background-color: rgb(190, 190, 190);
-}
-.sideways-scroll-child:nth-child(5) .scroll-child-content {
-    background-color: rgb(170, 170, 170);
-}
+// .sideways-scroll-child:nth-child(1) .scroll-child-content {
+//     background-color: white;
+// }
 
+// .sideways-scroll-child:nth-child(2) .scroll-child-content {
+//     background-color: rgb(230, 230, 230);
+// }
+
+// .sideways-scroll-child:nth-child(3) .scroll-child-content {
+//     background-color: rgb(210, 210, 210);
+// }
+
+// .sideways-scroll-child:nth-child(4) .scroll-child-content {
+//     background-color: rgb(190, 190, 190);
+// }
+
+// .sideways-scroll-child:nth-child(5) .scroll-child-content {
+//     background-color: rgb(170, 170, 170);
+// }
 
 ::-webkit-scrollbar {
     display: none;
