--- a/concept.css
+++ b/concept.css
@@ -22,6 +22,25 @@ h6 {
   margin: 0;
 }
 
+.car img {
+  z-index: 10;
+  position: fixed;
+  left: 10%;
+  bottom: 1em;
+  height: 100px;
+  width: 250px;
+}
+
+.road {
+  z-index: 9;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 2em;
+  background-color: gray;
+}
+
 .sideways-scroll-container {
   -ms-scroll-snap-type: y proximity;
       scroll-snap-type: y proximity;
