--- a/concept.css
+++ b/concept.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Caveat|Comfortaa|Fredoka+One&display=swap");
 body {
+  -webkit-animation: make-me-dizzy 1s;
+          animation: make-me-dizzy 1s;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
@@ -6,6 +9,7 @@ body {
   width: 100vw;
   font-size: calc(12px + (26 - 12) * ((100vw - 300px) / (1600 - 300)));
   line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+  color: white;
 }
 
 * {
@@ -29,6 +33,8 @@ h6 {
   bottom: 1em;
   height: 100px;
   width: 250px;
+  -webkit-animation: bounce 0.4s infinite;
+          animation: bounce 0.4s infinite;
 }
 
 .road {
@@ -42,8 +48,8 @@ h6 {
 }
 
 .sideways-scroll-container {
-  -ms-scroll-snap-type: y proximity;
-      scroll-snap-type: y proximity;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
   -webkit-transform: rotate(-90deg) translateY(-100vh);
           transform: rotate(-90deg) translateY(-100vh);
   -webkit-transform-origin: top right;
@@ -60,6 +66,7 @@ h6 {
   scroll-snap-stop: normal;
   height: 100vw;
   width: 100vh;
+  min-height: 500px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -67,8 +74,8 @@ h6 {
       -ms-flex-pack: center;
           justify-content: center;
   overflow: visible;
-  background: -webkit-gradient(linear, left top, left bottom, from(white), to(#e2e2e2));
-  background: linear-gradient(white 0%, #e2e2e2 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#7acaff), to(#7acaff));
+  background: linear-gradient(to right, #7acaff 0%, #7acaff 100%);
 }
 
 .scroll-child-content {
@@ -78,6 +85,7 @@ h6 {
           transform-origin: top left;
   height: 100vh;
   width: 100vw;
+  min-width: 500px;
   padding: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -96,12 +104,63 @@ h6 {
 
 /* CONTENT STYLING */
 h2 {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color: steelblue;
+  font-family: "Comfortaa", cursive;
   padding-bottom: 10px;
 }
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: none;
+            transform: none;
+  }
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: none;
+            transform: none;
+  }
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
+@-webkit-keyframes make-me-dizzy {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.5);
+            transform: rotate(0deg) scale(0.5);
+  }
+  100% {
+    -webkit-transform: rotate(1440deg) scale(1);
+            transform: rotate(1440deg) scale(1);
+  }
+}
+
+@keyframes make-me-dizzy {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.5);
+            transform: rotate(0deg) scale(0.5);
+  }
+  100% {
+    -webkit-transform: rotate(1440deg) scale(1);
+            transform: rotate(1440deg) scale(1);
+  }
 }
 /*# sourceMappingURL=concept.css.map */
