--- a/concept.scss
+++ b/concept.scss
@@ -1,8 +1,20 @@
 $scroll-container-width: 100vh;
 $scroll-container-height: 100vw;
+$page-min-width: 500px;
+
+$sky-blue: rgb(122, 202, 255);
+$light-sky-blue: rgb(149, 213, 255);
+
+@import url('https://fonts.googleapis.com/css?family=Caveat|Comfortaa|Fredoka+One&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap');
+$caveat: 'Caveat', cursive;
+$comfortaa: 'Comfortaa', cursive;
+$fredoka-one: 'Fredoka One', cursive;
 
 body {
+    animation: make-me-dizzy 1s;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    // font-family: $comfortaa;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -10,6 +22,8 @@ body {
 
     font-size: calc(12px + (26 - 12) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+
+    color: white;
 }
 
 * {
@@ -33,6 +47,8 @@ h6 {
         bottom: 1em;
         height: 100px;
         width: 250px;
+
+        animation: bounce 0.4s infinite ;
     }
 }
 
@@ -47,7 +63,7 @@ h6 {
 }
 
 .sideways-scroll-container {
-    scroll-snap-type: y proximity;
+    scroll-snap-type: y mandatory;
     transform: rotate(-90deg) translateY(-$scroll-container-width);
     transform-origin: top right;
     overflow-y: scroll;
@@ -56,6 +72,7 @@ h6 {
     background-color: black;
     height: $scroll-container-height;
     width: $scroll-container-width;
+    // min-width: $page-min-width;
 }
 
 .sideways-scroll-child {
@@ -64,13 +81,15 @@ h6 {
 
     height: $scroll-container-height;
     width: $scroll-container-width;
+    min-height: $page-min-width;
     align-items: center;
     justify-content: center;
 
     overflow: visible;
 
     // background: rgb(255, 255, 255);
-    background: linear-gradient(rgb(255, 255, 255) 0%, rgb(226, 226, 226) 100%);
+    // background: linear-gradient(rgb(255, 255, 255) 0%, rgb(226, 226, 226) 100%);
+    background: linear-gradient(to right, $sky-blue 0%, $sky-blue 100%);
 }
 
 .scroll-child-content {
@@ -78,6 +97,7 @@ h6 {
     transform-origin: top left;
     height: $scroll-container-width;
     width: $scroll-container-height;
+    min-width: $page-min-width;
     padding: 5%;
 
     display: flex;
@@ -86,13 +106,14 @@ h6 {
 
     .content-wrapper {
         text-align: justify;
+        // animation: bounce 1s infinite;
     }
 }
 
 /* CONTENT STYLING */
 h2 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: steelblue;
+    // font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: $comfortaa;
     padding-bottom: 10px;
 }
 
@@ -119,4 +140,28 @@ h2 {
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+@keyframes bounce {
+   0% {
+      transform: none;
+   }
+   
+   50% {
+      transform: translateY(-5px);
+   }
+
+   100% {
+      transform: none;
+   }
+}
+
+@keyframes make-me-dizzy {
+  0% {
+    transform: rotate(0deg) scale(0.5);
+  }
+
+  100% {
+    transform: rotate(1440deg) scale(1);
+  }
 }
