--- a/zen/style.scss
+++ b/zen/style.scss
@@ -16,7 +16,7 @@
     z-index: -3;
     left: -1em;
     top: -3em;
-    height: 50%;
+    height: 75%;
     width: 100vw;
     background-color: $bg-color;
   }
@@ -54,7 +54,7 @@ body {
   // line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
   // position: relative;
   // z-index: 0;
@@ -158,23 +158,27 @@ footer {
     filter: brightness(1.1);
   }
   @include card-icon('./assets/lightbulb2.svg');
-
-  @include after-color-bg($section-2-bg-color);
 }
 
 .explanation {
-  @include after-color-bg($section-3-bg-color);
+  @include after-color-bg($section-2-bg-color);
 }
 .participation {
-  @include after-color-bg($section-4-bg-color);
+  @include card-icon('./assets/hands.svg');
+  @include after-color-bg($section-3-bg-color);
 }
 .benefits {
-  @include after-color-bg($section-5-bg-color);
+  @include after-color-bg($section-4-bg-color);
 }
 .requirements {
-  @include after-color-bg($section-6-bg-color);
+  @include card-icon('./assets/checkbox.svg');
+  @include after-color-bg($section-5-bg-color);
   
 }
 footer {
 
+}
+
+::-webkit-scrollbar {
+  // width: 20px;
 }
